# webcam-tools

./: CMakeLists.txt  README  cleandoc.sh  makedoc.sh  uninstall.sh
doxygen/: libwebcam.cfg
doxygen/doc/libwebcam/: main.txt
doxygen/html/libwebcam/: default.css  footer.html  header.html
libwebcam/: CMakeLists.txt  README  compat.h  dynctrl.c  libwebcam.c  test.c
libwebcam/dynctrl/: uvcconfig.xsd
uvcdynctrl/: CMakeLists.txt  README  cmdline.c  cmdline.h  config.h.cmake  controls.c  controls.h  genincludes.sh  include.xsl  main.c  uvcdynctrl.ggo
uvcdynctrl/data/046d/: logitech.xml
uvcdynctrl/udev/rules/: 80-uvcdynctrl.rules
uvcdynctrl/udev/scripts/: uvcdynctrl
